# ghost-proxifier

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README-EN.md  README.md  compile.bat  config.json  ghost_core.cpp  ghost_injector.cpp
.github/workflows/: release.yml
cli/: CMakeLists.txt  commands_config.cpp  commands_dns.cpp  commands_inject.cpp  commands_list.cpp  commands_monitor.cpp  commands_proxy.cpp  commands_status.cpp  main.cpp  process_tree.cpp  resources.rc  udp_client.cpp  utils.cpp  utils.h
core/: CMakeLists.txt  config.cpp  dns.cpp  dns_cache.cpp  dns_pool.cpp  ghost_core.cpp  ghost_dns_dump.cpp  ghost_injector.cpp  ghost_injector.h  ghost_launcher.cpp  globals.h  hooks_dns.cpp  hooks_process.cpp  hooks_socket.cpp  injector.cpp  proxy.cpp  shellcode.cpp  stats.cpp  utils.cpp
